--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "repository": "git@github.com:caiotracera/nps-node.git",
   "author": "Caio Tracera <ctrcra@gmail.com>",
   "license": "MIT",
-  "scripts": {},
-  "dependencies": {},
+  "scripts": {
+    "build": "rimraf ./build && tsc",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --watch --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "start": "ts-node src/shared/infra/http/index.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "lint": "eslint --fix --ext .js,.ts,.json .",
+    "test": "jest"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
