--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
