chore: add reflect-metadata

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
