--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "Caio Tracera <ctrcra@gmail.com>",
   "license": "MIT",
   "scripts": {},
-  "dependencies": {},
+  "dependencies": {
+    "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "commitizen": "^4.2.3",
@@ -21,7 +25,8 @@
     "husky": "^5.1.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.5"
   },
   "config": {
     "commitizen": {
