--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "scripts": {},
   "dependencies": {
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0"
   },
