--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "forceConsistentCasingInFileNames": true,
     "removeComments": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["./build"]
 }
