--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {},
   "dependencies": {
     "jest": "^26.6.3",
+    "reflect-metadata": "^0.1.13",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0"
