--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {},
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
