--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^26.5.1",
