--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "express-async-errors": "^3.1.1",
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
-    "tsconfig-paths": "^3.9.0"
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
