--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,4 @@
 {
   "type": "sqlite",
-  "database": "./src/database/database.sqlite"
+  "database": "./src/shared/infra/typeorm/database.sqlite"
 }
