--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
     "no-console": "off",
     "prettier/prettier": "error",
     "no-use-before-define": "off",
+    "class-methods-use-this": "off",
+    "camelcase": "off",
+    "no-useless-constructor": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "import/extensions": [
       "error",
